[tool.poetry]
name = "introductory"
version = "0.1.0"
description = ""
authors = ["Timothy Wong <timothy.wong@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
datasets = "^2.19.2"
fastapi = "^0.111.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
